<resources>
    <string name="app_name">FortniteTracker</string>
    <string name="how_to_search_for_account_instruction">Tekst jak wyszukiwac konto todo fixme</string>
    <string name="search">szukaj</string>
    <string name="main_page">Main</string>
    <string name="youtube">Youtube</string>
    <string name="invite">Invite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="solo">SOLO</string>
    <string name="duos">DUOS</string>
    <string name="squads">SQUADS</string>
</resources>
